<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/FirstNameTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/LastNameTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/FirstNameTB"
        android:layout_below="@+id/FirstNameTB"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/LastName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/EmailAddressTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LastNameTB"
        android:layout_below="@+id/LastNameTB"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/ResgiserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EmailAddressTB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/Register" />

</RelativeLayout>
